After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629251 - g_socket_client_async_connect_complete: assertion failed: (data->connection) with master
g_socket_client_async_connect_complete: assertion failed: (data->connection) ...
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
2.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2010-09-10 10:32 UTC by Guillaume Desmottes
Modified: 2010-09-10 17:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_socket_client_connect_async: fix when g_socket_connect succeeds immediately (2.01 KB, patch)
2010-09-10 13:13 UTC, Dan Winship
committed Details | Review

Description Guillaume Desmottes 2010-09-10 10:32:06 UTC
My code used to work great with Glib 2.15.13. I updated to glib master and now I hit this assertion when trying to connect to an UNIX socket:

GLib-GIO:ERROR:gsocketclient.c:946:g_socket_client_async_connect_complete: assertion failed: (data->connection)

For the record, that's a telepathy-glib unit test in this branch:
http://git.Collabora.co.uk/?p=user/cassidy/telepathy-glib;a=shortlog;h=refs/heads/tp-stream-tube-29218

You can run it using "make -C tests/dbus check TESTS=test-stream-tube"
Comment 1 Guillaume Desmottes 2010-09-10 11:44:04 UTC
Seems I have this crash only when using an UNIX socket, not with an Inet one.
Comment 2 Dan Winship 2010-09-10 13:13:25 UTC
Created attachment 169948 [details] [review]
g_socket_client_connect_async: fix when g_socket_connect succeeds immediately
Comment 3 Guillaume Desmottes 2010-09-10 13:44:57 UTC
Your patch fixes my issue, thanks a lot.
Comment 4 Nicolas Dufresne (ndufresne) 2010-09-10 14:29:58 UTC
Review of attachment 169948 [details] [review]:

++, nice catch!
Comment 5 Dan Winship 2010-09-10 17:08:55 UTC
Attachment 169948 [details] pushed as bc29aa9 - g_socket_client_connect_async: fix when g_socket_connect succeeds immediately