g_socket_client_connect_async: fix when g_socket_connect succeeds immediately

https://bugzilla.gnome.org/show_bug.cgi?id=629251